--- a/app/src/main/res/layout/calnder_item.xml
+++ b/app/src/main/res/layout/calnder_item.xml
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cvRcalnder"
     android:layout_width="@dimen/_70sdp"
     android:layout_height="@dimen/_80sdp"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
     android:layout_marginHorizontal="@dimen/_5sdp"
-    app:cardCornerRadius="@dimen/_20sdp"
-    android:layout_marginTop="@dimen/_12sdp">
+    android:layout_marginTop="@dimen/_12sdp"
+    app:cardCornerRadius="@dimen/_8sdp"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -37,11 +35,11 @@
             android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_10sdp"
             android:text="20"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvWeekDay"
-            android:layout_marginTop="@dimen/_10sdp"/>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvWeekDay" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
