--- a/app/src/main/res/layout/fragment_blue_berry.xml
+++ b/app/src/main/res/layout/fragment_blue_berry.xml
@@ -52,7 +52,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -246,25 +246,25 @@
                 app:layout_constraintEnd_toEndOf="@id/glv2"
                 />
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnLogin"
-                android:layout_width="315dp"
-                android:layout_height="60dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginVertical="@dimen/_12sdp"
-                android:background="@drawable/gradient1"
-                android:text="Add to Breakfast Meal"
-                android:textAllCaps="false"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                app:backgroundTint="@null"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.core.widget.NestedScrollView>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btnLogin"
+        android:layout_width="315dp"
+        android:layout_height="60dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginVertical="@dimen/_12sdp"
+        android:background="@drawable/gradient1"
+        android:text="Add to Breakfast Meal"
+        android:textAllCaps="false"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        app:backgroundTint="@null"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
